# simple-auth

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  temp.txt
config/: settings.py  urls.py
core/: admin.py  serializers.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py
